<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.activity.PhoneLoginActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_login_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_100"
        app:bar_style="transparent"
        app:color_right="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:icon_back="true"
        app:title=""
        app:title_right="@string/login_register" />

    <TextView
        android:id="@+id/tx_phone_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="手机号登录"
        android:layout_marginLeft="@dimen/space_80"
        android:textSize="@dimen/font_size_40px"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/tb_login_title"
        android:layout_marginTop="@dimen/space_120"
         />

    <com.hjq.baselibrary.widget.ClearEditText
        android:id="@+id/et_login_phone"
        style="@style/EditTextStyle"
        app:layout_constraintTop_toBottomOf="@+id/tx_phone_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginTop="@dimen/space_40"
        android:layout_marginRight="@dimen/space_80"
        android:hint="@string/login_phone_input_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1" />

    <com.hjq.baselibrary.widget.ClearEditText
        android:id="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_phone"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginTop="@dimen/space_40"
        android:layout_marginRight="@dimen/space_80"
        android:hint="@string/login_password_input_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1" />


    <TextView
        android:id="@+id/tv_login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/space_80"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password"
        android:layout_marginTop="@dimen/space_30"
        android:layout_marginRight="@dimen/space_120"
        app:layout_constraintRight_toRightOf="parent"
        android:text="忘记了？找回密码"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btn_login_commit"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_forget"
        android:background="@drawable/shape_yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginTop="@dimen/space_60"
        android:layout_marginRight="@dimen/space_80"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/font_size_32px"
        android:text="@string/login_text" />
</android.support.constraint.ConstraintLayout>